feat: add main block

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <div class="wrap">
+
+    
+    <!-- <div class="wrap">
         <input type="checkbox" name="" id="">
-    </div>
+    </div> -->
 </body>
 </html>
