--- a/index.html
+++ b/index.html
@@ -7,10 +7,38 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <div class="wrap">
+        <nav class="nav">
+            <span class="logo">w</span>     
+            <ul class="nav-items">
+                <li></li>
+            </ul> 
+        </nav>
 
-    
-    <!-- <div class="wrap">
-        <input type="checkbox" name="" id="">
-    </div> -->
+        <header class="header">
+        </header>
+
+        <div class="container">
+            <main class="main">
+            </main>
+
+            <div class="container__iner">
+
+                <aside class="aside">
+                </aside>
+
+                <footer class="footer">
+                </footer>
+            </div>
+        </div>
+
+
+    </div>
+
+   
 </body>
 </html>
+
+ <!-- <div class="wrap">
+        <input type="checkbox" name="" id="">
+    </div> -->
