brocken my project

--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
         <header class="header">
         </header>
 
-        <div class="container">
-            <main class="main">
-            </main>
-
-            <div class="container__iner">
-
-                <aside class="aside">
-                </aside>
-
-                <footer class="footer">
-                </footer>
+        <main class="main">
+            <div class="main__header"></div>
+            <div class="main__footer"></div>
+            <div class="main__aside"></div>
+            <div class="main__inner">
+                <div class="main__todo"></div>
+                <div class="main__footer"></div>
+                <div class="main__footer"></div>
             </div>
-        </div>
+            
+        </main>
 
 
     </div>
