--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="source/style/main.css">
     <title>Dashboard</title>
 </head>
+
 <body>
     <div class="wrap">
         <nav class="nav">
-            <span class="logo">w</span>     
-            <ul class="nav-items">
-                <li></li>
-            </ul> 
+            <span class="nav__logo">w</span>
+            <ul class="nav__nav-items">
+                <li>1</li>
+            </ul>
         </nav>
 
         <header class="header">
         </header>
 
         <main class="main">
-            <div class="main__header"></div>
-            <div class="main__footer"></div>
-            <div class="main__aside"></div>
+            <div class="main__monthly"></div>
+            <div class="main__revenue"></div>
+            <div class="main__customers"></div>
             <div class="main__inner">
                 <div class="main__todo"></div>
                 <div class="main__footer"></div>
                 <div class="main__footer"></div>
             </div>
-            
         </main>
-
-
+        <div class="aside">
+            <div class="aside__menu"></div>
+            <div class="aside__cards"></div>
+            <div class="aside__search"></div>
+        </div>
+        <div class="footer"></div>
     </div>
 
-   
-</body>
-</html>
 
- <!-- <div class="wrap">
-        <input type="checkbox" name="" id="">
-    </div> -->
+</body>`
+
+</html>
