--- a/index.html
+++ b/index.html
@@ -12,33 +12,38 @@
     <div class="wrap">
         <nav class="nav">
             <span class="nav__logo">w</span>
-            <ul class="nav__nav-items">
-                <li>1</li>
+            <ul class="nav__items">
+                <li class="nav__cards">Home</li>
+                <li class="nav__cards">Stactics</li>
+                <li class="nav__cards">Users</li>
+                <li class="nav__cards">Settings</li>
+                <li class="nav__cards">Quires</li>
             </ul>
+            <button class="nav__button"></button>
         </nav>
 
         <header class="header">
         </header>
 
-        <main class="main">
-            <div class="main__monthly"></div>
-            <div class="main__revenue"></div>
-            <div class="main__customers"></div>
-            <div class="main__inner">
-                <div class="main__todo"></div>
-                <div class="main__footer"></div>
-                <div class="main__footer"></div>
-            </div>
-        </main>
-        <div class="aside">
-            <div class="aside__menu"></div>
-            <div class="aside__cards"></div>
-            <div class="aside__search"></div>
-        </div>
-        <div class="footer"></div>
+        <section class="section">
+            <main  class="main">
+                <div class="main__monthly"></div>
+                <div class="main__card"></div>
+                <div class="main__customers"></div>
+                <div class="main__inner">
+                    <div class="main__todo"></div>
+                    <div class="main__card"></div>
+                    <div class="main__card"></div>
+                </div>
+            </main>
+            <aside class="aside">
+                    <div class="aside__menu"></div>
+                    <div class="aside__cards"></div>
+                    <div class="aside__search"></div>
+                    <div class="aside__footer"></div>
+            </aside>
+        </section>
     </div>
-
-
 </body>`
 
 </html>
