feat: nav ready

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="source/style/main.css">
     <title>Dashboard</title>
 </head>
@@ -13,11 +14,21 @@
         <nav class="nav">
             <span class="nav__logo">w</span>
             <ul class="nav__items">
-                <li class="nav__cards">Home</li>
-                <li class="nav__cards">Stactics</li>
-                <li class="nav__cards">Users</li>
-                <li class="nav__cards">Settings</li>
-                <li class="nav__cards">Quires</li>
+                <li class="nav__cards nav--home">
+                    <span class="nav__titles">Home</span>
+                </li>
+                <li class="nav__cards nav--stactics">
+                    <span class="nav__titles">Stactics</span>
+                </li>
+                <li class="nav__cards nav--users">
+                    <span class="nav__titles">Users</span>
+                </li>
+                <li class="nav__cards nav--settings">
+                    <span class="nav__titles">Settings</span>
+                </li>
+                <li class="nav__cards nav--quires">
+                    <span class="nav__titles">Quires</span>
+                </li>
             </ul>
             <button class="nav__button"></button>
         </nav>
@@ -47,3 +58,6 @@
 </body>`
 
 </html>
+<!-- 
+font-family: 'Lato', sans-serif;
+font-family: 'Sansita Swashed', cursive; -->
