feat: add header main

--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
         </nav>
 
         <header class="header">
+            <div class="header__main">
+                <div class="header__tabs header--ellipse"></div>
+                <div class="header__tabs header--folder"></div>
+                <div class="header__tabs header--settings"></div>
+                <div class="header__form">
+                    <div class="header__field">
+                        <input class="header__search" type="text" placeholder="Search anuthing here">
+                        <input class="header__button" type="submit" value="">
+                    </div>
+                </div>
+                <div class="header__tabs header--upload"></div>
+                <div class="header__tabs header--letter"></div>
+                <div class="header__tabs header--planet"></div>
+                <img src="/source/img/jpg/Kendall.svg" alt="">
+                <div class="header__tabs header--size">
+                    <p class="header__names">Kendall Jener</p>
+                    <p class="header__function">Cheif Authority</p>
+                </div>
+                <div class="header__tabs">
+                    
+                </div>
+
+
+
+            </div>
+            <div class="header__footer"></div>
         </header>
 
         <section class="section">
