feat: add aside

--- a/index.html
+++ b/index.html
@@ -52,12 +52,8 @@
                     <p class="header__names">Kendall Jener</p>
                     <p class="header__function">Cheif Authority</p>
                 </div>
-                <div class="header__tabs">
-                    
-                </div>
-
-
-
+                <div class="header__tabs"></div>
+  
             </div>
             <div class="header__footer"></div>
         </header>
@@ -74,10 +70,66 @@
                 </div>
             </main>
             <aside class="aside">
-                    <div class="aside__menu"></div>
-                    <div class="aside__cards"></div>
-                    <div class="aside__search"></div>
-                    <div class="aside__footer"></div>
+                <div class="aside__menu">
+                    <div class="aside__blocks aside--people"></div>
+                    <div class="aside__blocks aside--chat"></div>
+                    <div class="aside__blocks aside--like"></div>
+                </div>
+                <div class="aside__cards">
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Jennifer.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Jennifer Lawrence</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Brad.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Brad Pitt</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Leonardo.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Leonardo Dicaprio</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Jesse.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Jesse Eisenberg</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Kristen.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Kristen Stewart</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+                    <div class="aside__cards-block">
+                        <img src="/source/img/jpg/Ben.svg" alt="">
+                        <div class="aside__titles">
+                            <p class="header__names">Ben Affleck</p>
+                            <p class="header__function">Cheif Authority</p>
+                        </div>  
+                        <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
+                    </div>
+
+
+
+                </div>
+                <div class="aside__search"></div>
+                <div class="aside__footer"></div>
             </aside>
         </section>
     </div>
