feat: add aside and footer

--- a/index.html
+++ b/index.html
@@ -128,8 +128,36 @@
 
 
                 </div>
-                <div class="aside__search"></div>
-                <div class="aside__footer"></div>
+                <div class="aside__field">
+                    <input class="aside__search" type="text" placeholder="Search peoples, Chats and Reviews">
+                    <input class="aside__button" type="submit" value="">
+                    <input class="aside__correct" type="submit" value="">
+                </div>
+                <div class="aside__footer">
+                    <p class="aside__header">Featured Companys</p>
+                    <div class="aside__socials">
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social_o.jpg" alt="" >
+                        </a>
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social-e.jpg" alt="" >
+                        </a>
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social_z.jpg" alt="" >
+                        </a>
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social_x.jpg" alt="" >
+                        </a>
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social_v.jpg" alt="" >
+                        </a>
+                        <a href="#">
+                            <img class="aside__logo" src="/source/img/bar_icons/social_vk.jpg" alt="" >
+                        </a>
+
+
+                    </div>
+                </div>
             </aside>
         </section>
     </div>
