feat: add main blocks

--- a/index.html
+++ b/index.html
@@ -55,18 +55,78 @@
                 <div class="header__tabs"></div>
   
             </div>
-            <div class="header__footer"></div>
+            <div class="header__footer">
+                <div class="header__blocks">
+                    <p class="header__title">Daily Visitors</p>
+                    <p class="header__text">150,0000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Customers</p>
+                    <p class="header__text">120,0000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Orders</p>
+                    <p class="header__text">900,000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Sales</p>
+                    <p class="header__text">850,000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Shipments</p>
+                    <p class="header__text">750,000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Revenue</p>
+                    <p class="header__text">$985,0000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title">Daily Reviews</p>
+                    <p class="header__text">600,000</p>
+                    <div class="header__span-text">
+                        <div class="header__span-high">1020</div>
+                        <div class="header__span-low">1020</div>
+                    </div>
+                </div>
+                <div class="header__blocks">
+                    <p class="header__title header__title-color">+ Add Stactics</p>
+                </div>
+            </div>
         </header>
 
         <section class="section">
             <main  class="main">
-                <div class="main__monthly"></div>
+                <div class="main__header"></div>
                 <div class="main__card"></div>
                 <div class="main__customers"></div>
                 <div class="main__inner">
                     <div class="main__todo"></div>
-                    <div class="main__card"></div>
-                    <div class="main__card"></div>
+                    <div class="main__card main__card-margin"></div>
+                    <div class="main__card main__card-margin"></div>
                 </div>
             </main>
             <aside class="aside">
@@ -124,9 +184,6 @@
                         </div>  
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
-
-
-
                 </div>
                 <div class="aside__field">
                     <input class="aside__search" type="text" placeholder="Search peoples, Chats and Reviews">
@@ -154,8 +211,6 @@
                         <a href="#">
                             <img class="aside__logo" src="/source/img/bar_icons/social_vk.jpg" alt="" >
                         </a>
-
-
                     </div>
                 </div>
             </aside>
