--- a/index.html
+++ b/index.html
@@ -121,12 +121,38 @@
         <section class="section">
             <main  class="main">
                 <div class="main__header"></div>
-                <div class="main__card"></div>
+                <div class="main__card">
+                    <p class="main__names">Revenue Per Our</p>
+                    <img class="main__card-size" src="/source/img/jpg/revenue.jpg" alt="">
+                    <p class="main__text">&#160;</p>
+                    <div class="main__span-text">
+                        <div class="main__span-high">1020</div>
+                        <div class="main__span-low">1020</div>
+                    </div>
+                </div>
                 <div class="main__customers"></div>
                 <div class="main__inner">
                     <div class="main__todo"></div>
-                    <div class="main__card main__card-margin"></div>
-                    <div class="main__card main__card-margin"></div>
+                    <div class="main__card main__card-margin">
+                        <p class="main__names">Progress</p>
+                        <img class="main__card-size" src="/source/img/jpg/progress.jpg" alt="">
+                        <p class="main__text main__text-color">$150,0000</p>
+                        <div class="main__span-text">
+                            <div class="main__span-high">1020</div>
+                            <div class="main__span-low">1020</div>
+                        </div>
+                    </div>
+                    <div class="main__card main__card-margin">
+                        <p class="main__names">Shipments</p>
+                        <img class="main__card-size" src="/source/img/jpg/shipments.jpg" alt="">
+                        <div class="main__card-footer">
+                            <p class="main__text">$15,000</p>
+                            <div class="main__span-text main__span-text-margin">
+                                <div class="main__span-high">1020</div>
+                                <div class="main__span-low">1020</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <aside class="aside">
