feat: add inner blocks

--- a/index.html
+++ b/index.html
@@ -130,9 +130,50 @@
                         <div class="main__span-low">1020</div>
                     </div>
                 </div>
-                <div class="main__customers"></div>
+
+
+                <div class="main__customers">
+
+                </div>
+
+
                 <div class="main__inner">
-                    <div class="main__todo"></div>
+                    <div class="main__todo">
+                        <p class="main__names">Today Task</p>
+                        <div class="main__inner-todo">
+                            <div class="main__inner-blocks">
+                                <span class="main__inner-blocks-circle"></span>
+                                <p class="main__inner-blocks-title">Arrange</p>
+                                <span class="main__inner-blocks-text">simply dummy text of the printing and........</span>
+                                <span class="main__inner-blocks-clock"></span>
+                                <span class="main__inner-blocks-time">12:24 am</span>
+                            </div>
+                            <div class="main__inner-blocks">
+                                <span class="main__inner-blocks-circle"></span>
+                                <p class="main__inner-blocks-title">Shipment</p>
+                                <span class="main__inner-blocks-text">simply dummy text of the printing and........</span>
+                                <span class="main__inner-blocks-clock"></span>
+                                <span class="main__inner-blocks-time">01:10 am</span>
+                            </div>
+                            <div class="main__inner-blocks">
+                                <span class="main__inner-blocks-circle"></span>
+                                <p class="main__inner-blocks-title">Arrange</p>
+                                <span class="main__inner-blocks-text">simply dummy text of the printing and........</span>
+                                <span class="main__inner-blocks-clock"></span>
+                                <span class="main__inner-blocks-time">01:24 am</span>
+                            </div>
+                            <div class="main__inner-blocks main__inner-blocks-border">
+                                <span class="main__inner-blocks-circle"></span>
+                                <p class="main__inner-blocks-title">Arrange</p>
+                                <span class="main__inner-blocks-text">simply dummy text of the printing and........</span>
+                                <span class="main__inner-blocks-clock"></span>
+                                <span class="main__inner-blocks-time">01:30 am</span>
+                            </div>
+                        </div>
+                    </div>
+
+
+
                     <div class="main__card main__card-margin">
                         <p class="main__names">Progress</p>
                         <img class="main__card-size" src="/source/img/jpg/progress.jpg" alt="">
