feat: add customers feed

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <main  class="main">
                 <div class="main__header"></div>
                 <div class="main__card">
-                    <p class="main__names">Revenue Per Our</p>
+                    <p class="main__names">Revenue per our</p>
                     <img class="main__card-size" src="/source/img/jpg/revenue.jpg" alt="">
                     <p class="main__text">&#160;</p>
                     <div class="main__span-text">
@@ -132,14 +132,39 @@
                 </div>
 
 
-                <div class="main__customers">
 
+                <div class="main__footer">
+                    <p class="main__names">Customers feed</p>
+                    <div class="main__footer-bloks">  
+                        <div class="main__footer-card">
+                            <img src="/source/img/jpg/sophie.svg" width="45" height="45" alt="">
+                            <p class="main__footer-text">10 min ago</p>
+                        </div>
+                        <p class="main__footer-span"><span class="main__footer-span-select">Sophie turner</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s, when an</p>
+                    </div>
+
+                    <div class="main__footer-inner">
+                        <div class="main__footer-inner-aside"></div>
+                        <div class="main__footer-inner-main">
+                            <p class="main__footer-span main__footer-span-resize"></p>
+                            <p class="main__footer-span main__footer-span-resize"></p>
+                        </div>
+                    </div>
+                    <div class="main__footer-bloks">  
+                        <div class="main__footer-card">
+                            <img src="/source/img/jpg/peter.svg" width="45" height="45" alt="">
+                            <p class="main__footer-text">10 min ago</p>
+                        </div>
+                        <p class="main__footer-span"><span class="main__footer-span-select">Peter quill</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s, when an</p>
+                    </div>
+                        
                 </div>
+
 
 
                 <div class="main__inner">
                     <div class="main__todo">
-                        <p class="main__names">Today Task</p>
+                        <p class="main__names">Today task</p>
                         <div class="main__inner-todo">
                             <div class="main__inner-blocks">
                                 <span class="main__inner-blocks-circle"></span>
