feat: main aside correct

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
                     <div class="main__footer-inner">
                         <div class="main__footer-inner-aside"></div>
                         <div class="main__footer-inner-main">
-                            <p class="main__footer-span main__footer-span-resize"></p>
-                            <p class="main__footer-span main__footer-span-resize"></p>
+                            <p class="main__footer-span main__footer-span-resize"><span class="main__footer-span-select">Sophie turner</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s</p>
+                            <p class="main__footer-span main__footer-span-resize"><span class="main__footer-span-select">Sophie turner</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s</p>
                         </div>
                     </div>
                     <div class="main__footer-bloks">  
                         <div class="main__footer-card">
                             <img src="/source/img/jpg/peter.svg" width="45" height="45" alt="">
-                            <p class="main__footer-text">10 min ago</p>
+                            <p class="main__footer-text">15 min ago</p>
                         </div>
                         <p class="main__footer-span"><span class="main__footer-span-select">Peter quill</span> is simply dummy text of the printing and type settings industry. Lorem ipsumhas been the industrys standart dummy text ever since the 1500s, when an</p>
                     </div>
