add sidebar scroll

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         <!-- header -->
         <header class="header">
             <div class="header__main">
-                <div class="header__tabs header--ellipse"></div>
+                <div class="header__tabs">
+                    <div class="header__ellipse">
+                        <div class="main__header-circle header__header-circle-color"></div>
+                        <div class="main__header-circle"></div>
+                        <div class="main__header-circle"></div>
+                    </div>
+                </div>
                 <div class="header__tabs header--folder"></div>
                 <div class="header__tabs header--settings"></div>
                 <div class="header__form">
@@ -54,7 +60,7 @@
                     <p class="header__function">Cheif Authority</p>
                 </div>
                 <div class="header__tabs">
-                    <button class="main__header-settings">
+                    <button class="main__header-settings header__settings-margin">
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
