add main header full

--- a/index.html
+++ b/index.html
@@ -146,6 +146,29 @@
                             </button>
                         </div>
                     </div>
+                    <div class="main__graphics">
+                        <div class="main__graphics-axis-y">
+                            <p class="main__axis-y">400k</p>
+                            <p class="main__axis-y">300k</p>
+                            <p class="main__axis-y">200k</p>
+                            <p class="main__axis-y">100k</p>
+                        </div>
+                        <img class="main__graphics-graphics" src="/source/img/jpg/graphic.jpg" alt="">
+                        <div class="main__graphics-axis-x">
+                            <p class="main__axis-x">Jan</p>
+                            <p class="main__axis-x">Feb</p>
+                            <p class="main__axis-x">Mar</p>
+                            <p class="main__axis-x">Apr</p>
+                            <p class="main__axis-x">May</p>
+                            <p class="main__axis-x">Jun</p>
+                            <p class="main__axis-x">Jul</p>
+                            <p class="main__axis-x">Aug</p>
+                            <p class="main__axis-x">Sep</p>
+                            <p class="main__axis-x">Oct</p>
+                            <p class="main__axis-x">Nov</p>
+                            <p class="main__axis-x">Dec</p>
+                        </div>
+                    </div>
 
 
 
