add mobile size

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
                 </div>
                 <div class="header__tabs header--folder"></div>
                 <div class="header__tabs header--settings"></div>
-                <div class="header__form">
+                <!-- <div class="header__form"> -->
                     <div class="header__field">
                         <input class="header__search" type="text" placeholder="Search anything here">
                         <input class="header__button" type="submit" value="">
                     </div>
-                </div>
+                <!-- </div> -->
                 <div class="header__tabs header--upload"></div>
                 <div class="header__tabs header--letter"></div>
                 <div class="header__tabs header--planet"></div>
-                <img src="/source/img/jpg/Kendall.svg" alt="">
+                <div class="header__tabs header--img"></div>
+                    <!-- <img src="/source/img/jpg/Kendall.svg" alt=""> -->
+                
                 <div class="header__tabs header--size">
                     <p class="header__names">Kendall Jener</p>
                     <p class="header__function">Cheif Authority</p>
                 </div>
-                <div class="header__tabs">
-                    <button class="main__header-settings header__settings-margin">
+                <div class="header__tabs header__tabs-settings-padding">
+                    <button class="main__header-settings">
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
                         <div class="main__header-circle"></div>
