correct main span text 1020

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                     </div>
                 </div>
             </main>
+            <!-- aside -->
             <aside class="aside">
                 <div class="aside__menu">
                     <div class="aside__blocks aside--people"></div>
@@ -282,7 +283,7 @@
                 </div>
                 <div class="aside__cards">
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Jennifer.svg" alt="">
+                        <img src="/source/img/jpg/jennifer.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Jennifer Lawrence</p>
                             <p class="header__function">Cheif Authority</p>
@@ -290,7 +291,7 @@
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Brad.svg" alt="">
+                        <img src="/source/img/jpg/brad.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Brad Pitt</p>
                             <p class="header__function">Cheif Authority</p>
@@ -298,7 +299,7 @@
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Leonardo.svg" alt="">
+                        <img src="/source/img/jpg/leonardo.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Leonardo Dicaprio</p>
                             <p class="header__function">Cheif Authority</p>
@@ -306,7 +307,7 @@
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Jesse.svg" alt="">
+                        <img src="/source/img/jpg/jesse.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Jesse Eisenberg</p>
                             <p class="header__function">Cheif Authority</p>
@@ -314,7 +315,7 @@
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Kristen.svg" alt="">
+                        <img src="/source/img/jpg/kristen.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Kristen Stewart</p>
                             <p class="header__function">Cheif Authority</p>
@@ -322,7 +323,7 @@
                         <img class="aside__chat" src="/source/img/bar_icons/chat.svg" alt="">
                     </div>
                     <div class="aside__cards-block">
-                        <img src="/source/img/jpg/Ben.svg" alt="">
+                        <img src="/source/img/jpg/ben.svg" alt="">
                         <div class="aside__titles">
                             <p class="header__names">Ben Affleck</p>
                             <p class="header__function">Cheif Authority</p>
