--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <link rel="stylesheet" href="source/style/main.css">
     <title>Dashboard</title>
 </head>
+<!-- hamburger -->
+
 
 <body>
     <div class="wrap">
         <!-- navigation -->
         <nav class="nav">
-            <span class="nav__logo">w</span>
+            <div class="nav__logotype">
+                <span class="nav__logo">w</span>
+                <button class="nav__hamburger">
+                    <div class="nav__hamburger-line"></div>
+                    <div class="nav__hamburger-line"></div>
+                    <div class="nav__hamburger-line"></div>
+                </button>
+            </div>
             <ul class="nav__items">
                 <li class="nav__cards nav--home">
                     <span class="nav__titles">Home</span>
@@ -58,7 +67,7 @@
                     <!-- <img src="/source/img/jpg/Kendall.svg" alt=""> -->
                 
                 <div class="header__tabs header--size">
-                    <p class="header__names">Kendall Jener</p>
+                    <p class="header__names header__names-color">Kendall Jener</p>
                     <p class="header__function">Cheif Authority</p>
                 </div>
                 <div class="header__tabs header__tabs-settings-padding">
